[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "koi-net-hackmd-sensor-node"
version = "0.1.0"
description = "KOI-net HackMD sensor node for content ingestion"
authors = [
    {name = "Luke Miller", email = "luke@block.science"},
    {name = "Sayer Tindall", email = "sayer@block.science"}
]

readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "koi-net==1.3.0b6",
    "rich>=14.0.0",
    "httpx>=0.28.1",
    "rid-lib>=3.2.14",
]

[project.urls]
Homepage = "http://github.com/BlockScience/koi-net-hackmd-sensor-node"


[project.optional-dependencies]
dev = ["build", "pytest>=7.0", "pytest-mock>=3.10"]
