[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "koi-net-hackmd-sensor-node"
version = "0.1.0"
description = "KOI-net HackMD sensor node for content ingestion"
authors = [
    {name = "BlockScience Dev", email = "luke@block.science"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "koi-net~=1.1",
    "colorama>=0.4.6",
    "rid_lib>=3.2.13",
    "rich>=14.0.0",
    "httpx>=0.28.1"
]

[project.optional-dependencies]
dev = ["twine>=6.0", "build", "pytest>=7.0", "pytest-mock>=3.10"]

[project.urls]
Homepage = "https://github.com/BlockScience/koi-net-hackmd-sensor-node"
